--- a/LandingPage.html
+++ b/LandingPage.html
@@ -1,32 +1,57 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title> </title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="landingpage.css">
-</head>
+	<head>
+		<title> </title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-widht, initial-scale=1.0">
+
+		<link rel="stylesheet" href="landingpage.css">
+
+	</head>
 
 
-<body>
-
-	<h1> Metanoia </h1>
-	<p> Vous l'avez pensé, et nous l'avons fait. 
+	<body>
+		<h1> METANOIA. </h1>
+		<h2> L'appli musicale qui va révolutionner votre manière de penser. . . </h2>
+		
 	<br>
-	Bientôt disponible sur tout vos écrans, la nouvelle application de streaming musicale pour les CDRs 
 	<br>
-	Pour etre 
-	</p>
+	<br>
+	<br>
 
-	<form> 
-		<label> PSEUDO </label> 
-		<input type="text" placeholder="Entrez Votre Pseudo" >
+	<div id="conteneur1"> 
+		
+		<p>Votre nouvelle plateforme de musique sera bientôt disponible. . . </p> 
+		<img class="image1" src="Diamant.png">
+	</div>
+	</div>
+ 	<div id=conteneur2>
+ 		<p> Soyez le premier au courant en vous abonnant à la newsletter! </p>
+ 		<img class="image2" src="">
+
+ 		
+ 	</div>
+ 
+		<form> 
+		
+		<label id="EMAIL">  </label>
 		<br>
-		<label> EMAIL </label>
-		<input type="email" placeholder="Entrez votre adresse Email">
+		<input id="mail" type="email" placeholder="Entrez votre adresse. . . ">
 		<br>
-		<button> Envoyer </button>
+		<button> S'abonner </button>
 
-	</form>
+		</form>
+	<br>
+	<br>
+	<br>
+	<br>
 
-</body>
+	<div id="conteneur2">
+		<div class="element2"> <h3> Bientôt sur Itunes </h3> <p>  </p> </div>
+		<img class="image3" src="Preorder.jpeg">
+	</div>
+
+
+
+	</body>
 </html>
