--- a/LandingPage.html
+++ b/LandingPage.html
@@ -3,7 +3,7 @@
 	<head>
 		<title> </title>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-widht, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<link rel="stylesheet" href="landingpage.css">
 
@@ -17,14 +17,13 @@
 	<br>
 	<br>
 	<br>
-	<br>
 
 	<div id="conteneur1"> 
 		
 		<p>Votre nouvelle plateforme de musique sera bientôt disponible. . . </p> 
 		<img class="image1" src="Diamant.png">
 	</div>
-	</div>
+
  	<div id=conteneur2>
  		<p> Soyez le premier au courant en vous abonnant à la newsletter! </p>
  		<img class="image2" src="">
@@ -43,14 +42,18 @@
 		</form>
 	<br>
 	<br>
-	<br>
-	<br>
 
-	<div id="conteneur2">
-		<div class="element2"> <h3> Bientôt sur Itunes </h3> <p>  </p> </div>
+
+	<div id="conteneur3">
+		<div class="element2"> <h3> Bientôt sur Itunes </h3> 
+			<p> Plus que quelques jours. . .  </p> </br> </div>
 		<img class="image3" src="Preorder.jpeg">
 	</div>
 
+
+	
+		<img class="imagebas" src="LandingPage1">
+	
 
 
 	</body>
