--- a/LandingPage.html
+++ b/LandingPage.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> </title>
+		<title> Metanoia</title>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-widht, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<link rel="stylesheet" href="landingpage.css">
 
@@ -27,7 +27,7 @@
 	</div>
  	<div id=conteneur2>
  		<p> Soyez le premier au courant en vous abonnant à la newsletter! </p>
- 		<img class="image2" src="">
+ 		<img class="image2" src="Play.png">
 
  		
  	</div>
@@ -45,10 +45,32 @@
 	<br>
 	<br>
 	<br>
+	<div class="bloc">
+		<div class="titre"> <h4> LOREM IPSUM DOLOR </h4></div>
+		<div id="conteneur3"> 
+			<div class="FlexBox3">
+				<div class="Texte"> <h5> LOREM </h5></div>
+				<div class="Icone"> <img src="Micro.png"> </div>
+				<p> Lorem Ipsum dolor </br> sit amet. Lorem</br> Ipsum dolor </br> sit amet.</p>
+			</div>
+			<div class="FlexBox3">
+				<div class="Texte"> <h5> IPSUM </h5> </div>
+				<div class="Icone"> <img src="Devices.png"> </div>
+				<p> Consectetur </br> adipiscing elit. Consec</br>tetur </br> adipiscing elit.</p>
+			</div>
+			<div class="FlexBox3">
+				<div class="Texte"> <h5> DOLORA </h5> </div>
+				<div class="Icone"> <img src="Son.png"> </div> 
+				<p> Suspendisse varius </br> enim in eros </br> elementum. Suspendisse </br> varius enim in eros </br> elementum</p>
+			</div>	
+		</div>
+	</div>
+</br>
+</br>
 
-	<div id="conteneur2">
-		<div class="element2"> <h3> Bientôt sur Itunes </h3> <p>  </p> </div>
-		<img class="image3" src="Preorder.jpeg">
+	<div id="conteneur4">
+		<div class="element2"> <h3> Bientôt sur Itunes </h3></div>
+		<img class="image3" src="Itunes.png">
 	</div>
 
 
